--- a/index.html
+++ b/index.html
@@ -13,18 +13,14 @@
     <div class="container-fluid display-pane">
         <div class="row display-pane">
             <div class="col-3 menu" id="menu-container" data-bind="with: MenuContainerModel.MenuViewModel">
-                <ul data-bind="foreach: menuItems">
-                    <li class="menu-item">
-                        <menu-component params="pMenu: $data"></menu-component>
-                    </li>
-                </ul>
+                <!-- ko foreach: menuItems -->
+                    <menu-component params="pMenu: $data"></menu-component>
+                <!-- /ko -->
             </div>
             <div class="col-9 display" id="job-container" data-bind="with: JobContainerModel.JobViewModel">
-                <ul data-bind="foreach: jobItems">
-                    <li class="job-item">
-                        <job-component params="pJob: $data" class="job"></job-component>
-                    </li>
-                </ul>
+                <!-- ko foreach: jobItems -->
+                    <job-component params="pJob: $data" class="job"></job-component>
+                <!-- /ko -->
             </div>
         </div>
     </div>
